--- a/CLASE 3/pizza.html
+++ b/CLASE 3/pizza.html
@@ -106,7 +106,7 @@
             <p>&copy; 2025 - Pizzeria NuevoAmanecer | Todos los derechos reservados</p>
         <!--Añadimos numero de contancto-->
         <!--El campo target, me permite crear una nueva pestaña-->
-         <p><strong> Contacto: </strong> <a href="https://wa.link/crrwr9" target="_blank">939392924</a></p>    
+         <p><strong> Contacto: </strong> <a href="https://wa.link/" target="_blank">939392924</a></p>    
 
 
 </footer>
